compiler/testData/diagnostics/testsWithStdLib/contracts/dsl/errors/emptyContract.kt
// !LANGUAGE: +AllowContractsForCustomFunctions +UseReturnsEffect
// !DIAGNOSTICS: -INVISIBLE_REFERENCE -INVISIBLE_MEMBER

import kotlin.internal.contracts.*

fun emptyContract() {
    contract { }
}